business_system/support/identity_security_management/single_sign-on/auth_service/deployment/local/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dibank-auth-service
  namespace: default
  labels:
    group: dibank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dibank-auth-service
      group: dibank
  template:
    metadata:
      labels:
        app: dibank-auth-service
        group: dibank
    spec:
      containers:
        - name: dibank-auth-service
          image: dibank-auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8004
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
