business_system/support/identity_security_management/single_sign-on/auth_service/deployment/local/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dibank-auth-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8004
      targetPort: 8004
      nodePort: 30004
      protocol: TCP
  selector:
    app: dibank-auth-service
