business_system/support/identity_security_management/single_sign-on/auth_service/deployment/local/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dibank-auth-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dibank-auth-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dibank-auth-service
                port:
                  number: 8004
